...
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="notifications">
        <NativeTabs.Trigger.Icon
          md={APP_SYMBOLS.notification.android}
          sf={APP_SYMBOLS.notification.ios}
        />
        <NativeTabs.Trigger.Label>알림</NativeTabs.Trigger.Label>
        <NativeTabs.Trigger.Badge hidden={badge === undefined}>
          {badge}
        </NativeTabs.Trigger.Badge>
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="account">
        <NativeTabs.Trigger.Icon
          md={APP_SYMBOLS.account.android}
          sf={APP_SYMBOLS.account.ios}
        />
        <NativeTabs.Trigger.Label>계정</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>
    </NativeTabs>
  );
}

